--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -10,9 +10,11 @@
 
     <script type="text/javascript" src="{% static "jquery/jquery-3.5.1.min.js" %}"></script>
     <script type="text/javascript" src="{% static "bootstrap/js/bootstrap.min.js" %}"></script>
+
     {% block scripts %} {% endblock %}
 </head>
 <body>
+{% include "core/include/navbar.html" %}
 {% block content %}
 {% endblock %}
 </body>
