--- a/haxball_site/core/templates/core/profile/profile_detail.html
+++ b/haxball_site/core/templates/core/profile/profile_detail.html
@@ -1,7 +1,7 @@
 {% extends "core/home.html" %}
 {% load static %}
 
-{% block profile %}
+{% block profile_of_user %}
     <h1>{{ profile.name }}</h1>
     <img src="{{ profile.avatar.url }}">
     <p>{{ profile.about }}</p>
