--- a/haxball_site/core/templates/core/post/list.html
+++ b/haxball_site/core/templates/core/post/list.html
@@ -8,6 +8,9 @@
                 <a href="{{ post.get_absolute_url }}" class="post_header">
                     {{ post.title }}
                 </a>
+                {% if post.important %}
+                    <h3>Закреплён</h3>
+                {% endif %}
             </div>
             <div class="card-body">
                 <p class="card-text">{{ post.body|truncatewords:30|linebreaks }}</p>
