--- a/haxball_site/core/templates/core/profile/profile_detail.html
+++ b/haxball_site/core/templates/core/profile/profile_detail.html
@@ -12,3 +12,36 @@
     <p>{{ profile.about }}</p>
 
 {% endblock %}
+
+
+{% block comments %}
+    {% with profile.comments.count as total_comments %}
+        <h2>
+            {{ total_comments }} comment{{ total_comments|pluralize }}
+        </h2>
+    {% endwith %}
+
+    {% for comment in profile.comments.all %}
+        <div class="comment">
+            <p class="info">
+                Comment {{ forloop.counter }} by {{ comment.author }}
+                {{ comment.created }}
+            </p>
+            {{ comment.body|linebreaks }}
+        </div>
+    {% empty %}
+        <p>There are no comments yet.</p>
+    {% endfor %}
+
+    {% if new_comment %}
+        <h2>Your comment has been added.</h2>
+    {% else %}
+        <h2>Add a new comment</h2>
+        <form action={% url 'core:profile_detail' profile.slug %} method="post">
+            {{ comment_form.as_p }}
+            {% csrf_token %}
+            <p><input type="submit" value="Add comment"></p>
+        </form>
+    {% endif %}
+
+{% endblock %}
