--- a/haxball_site/core/templates/core/include/navbar.html
+++ b/haxball_site/core/templates/core/include/navbar.html
@@ -1,6 +1,6 @@
 {% load static %}
 <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Oswald:wght@300&display=swap" rel="stylesheet">
-<nav class="navbar navbar-light navbar_color nav-fill">
+<nav class="navbar navbar-light navbar_color nav-fill" style = background-image:url({% static "img/green_back.jpg" %})>
 
     <form class="form-inline">
         <input class="form-control mr-sm-2" type="search" placeholder="Поиск" aria-label="Search">
