--- a/haxball_site/core/templates/core/include/form_comment.html
+++ b/haxball_site/core/templates/core/include/form_comment.html
@@ -1,14 +1,16 @@
-<form action={% url 'core:add_comment' element.id element.slug %} method="post">
-    {% csrf_token %}
-    <div class="form-group">
+<div class="card" style="padding: 10px; background-color: #e2e3e5">
+    <form action={% url 'core:add_comment' element.id element.slug %} method="post">
+        {% csrf_token %}
+        <!-- <div class="form-group">
         <label for="nickname">{{ nickname }}</label>
-    </div>
-    <div class="form-group editContent">
-        <label for="contactcomment" class="editContent">
-            Ваш комментарий:
-        </label>
-        <textarea class="form-control border" rows="5" name="body"
-                  id="contactcomment" required=""></textarea>
-    </div>
-    <button type="submit" class="btn btn-primary">Отправить</button>
-</form>
+    </div> --!>
+        <div class="form-group editContent">
+
+        <textarea class="form-control border" rows="3" name="body"
+                  id="contactcomment" required="" rows="2" placeholder="Добавьте Ваш комментарий"></textarea>
+        </div>
+        <div align="right">
+            <button type="submit" class="btn btn-primary" style="margin-right: 20px">Отправить</button>
+        </div>
+    </form>
+</div>
