--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -7,6 +7,8 @@
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="{% static "bootstrap/css/bootstrap.min.css" %}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
     {% block styles %} {% endblock %}
 
     <script type="text/javascript" src="{% static "jquery/jquery-3.5.1.min.js" %}"></script>
