--- a/haxball_site/core/templates/core/include/form_comment.html
+++ b/haxball_site/core/templates/core/include/form_comment.html
@@ -3,7 +3,7 @@
         {% csrf_token %}
         <!-- <div class="form-group">
         <label for="nickname">{{ nickname }}</label>
-    </div> --!>
+    </div> -->
         <div class="form-group editContent">
 
         <textarea class="form-control border" rows="3" name="body"
